--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -21,6 +21,19 @@ jobs:
           args: ./Ejercicio/VUnit/vunit_run.py
 
 
+  Proyecto:
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: '🧰 Checkout'
+        uses: actions/checkout@v3
+
+      - uses: docker://gcr.io/hdl-containers/sim
+        with:
+          args: ./Proyecto/run.sh
+
+
   Extra:
     runs-on: ubuntu-latest
 
