--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: docker://gcr.io/hdl-containers/sim/osvb
         with:
-          args: ./Ejercicio/VUnit/vunit_run.py
+          args: ./Ejercicio/vunit_run.py
 
 
   Proyecto:
